data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef signed int int32_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
typedef unsigned long long uint64_t;
int strcmp (const char *, const char *);
struct DListHead {
    struct DListHead *next;
    struct DListHead *prev;
};
struct HdfObject {
    int32_t objectId;
};
typedef enum {
    DEVICE_CLASS_DEFAULT = 0x1 << 0,
    DEVICE_CLASS_PLAT = 0x1 << 1,
    DEVICE_CLASS_SENSOR = 0x1 << 2,
    DEVICE_CLASS_INPUT = 0x1 << 3,
    DEVICE_CLASS_DISPLAY = 0x1 << 4,
    DEVICE_CLASS_AUDIO = 0x1 << 5,
    DEVICE_CLASS_CAMERA = 0x1 << 6,
    DEVICE_CLASS_USB = 0x1 << 7,
    DEVICE_CLASS_USERAUTH = 0x1 << 8,
    DEVICE_CLASS_HIMEDIACOMM = 0x1 << 9,
    DEVICE_CLASS_MAX = 0x1 << 10,
} DeviceClass;
struct HdfSBuf;
struct HdfDeviceObject {
    struct IDeviceIoService *service;
    const struct DeviceResourceNode *property;
    DeviceClass deviceClass;
    void *priv;
};
struct HdfDeviceIoClient {
    struct HdfDeviceObject *device;
    void *priv;
};
struct IDeviceIoService {
    struct HdfObject object;
    int32_t (*Open)(struct HdfDeviceIoClient *client);
    int32_t (*Dispatch)(struct HdfDeviceIoClient *client, int cmdId, struct HdfSBuf *data, struct HdfSBuf *reply);
    void (*Release)(struct HdfDeviceIoClient *client);
};
struct HdfDriverEntry {
    int32_t moduleVersion;
    const char *moduleName;
    int32_t (*Bind)(struct HdfDeviceObject *deviceObject);
    int32_t (*Init)(struct HdfDeviceObject *deviceObject);
    void (*Release)(struct HdfDeviceObject *deviceObject);
};
struct HdfDriver {
    const struct HdfDriverEntry *entry;
    uint16_t type;
    uint16_t bus;
    struct DListHead node;
    void *priv;
};
__attribute__((weak)) int32_t HdfSysEventSend(uint64_t eventClass, uint32_t event, const char *content, _Bool sync);
struct HdfSBuf;
typedef unsigned int UINT32;
typedef UINT32 size_t;
struct DeviceResourceAttr {
    const char *name;
    const char *value;
    struct DeviceResourceAttr *next;
};
struct DeviceResourceNode {
    const char *name;
    uint32_t hashValue;
    struct DeviceResourceAttr *attrData;
    struct DeviceResourceNode *parent;
    struct DeviceResourceNode *child;
    struct DeviceResourceNode *sibling;
};
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));
void *OsalMemCalloc(size_t size);
void OsalMemFree(void *mem);