data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/manager__c248934e0221/.c2r_bindgen_extern/driver_manager_0dc449df.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn strcmp(
        arg1: *const ::core::ffi::c_char,
        arg2: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DListHead {
    pub next: *mut DListHead,
    pub prev: *mut DListHead,
}
pub const DEVICE_CLASS_DEFAULT: DeviceClass = 1;
pub const DEVICE_CLASS_PLAT: DeviceClass = 2;
pub const DEVICE_CLASS_SENSOR: DeviceClass = 4;
pub const DEVICE_CLASS_INPUT: DeviceClass = 8;
pub const DEVICE_CLASS_DISPLAY: DeviceClass = 16;
pub const DEVICE_CLASS_AUDIO: DeviceClass = 32;
pub const DEVICE_CLASS_CAMERA: DeviceClass = 64;
pub const DEVICE_CLASS_USB: DeviceClass = 128;
pub const DEVICE_CLASS_USERAUTH: DeviceClass = 256;
pub const DEVICE_CLASS_HIMEDIACOMM: DeviceClass = 512;
pub const DEVICE_CLASS_MAX: DeviceClass = 1024;
pub type DeviceClass = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfObject {
    pub objectId: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pthread_rwlock_t {
    pub __u: pthread_rwlock_t__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union pthread_rwlock_t__bindgen_ty_1 {
    pub __i: [::core::ffi::c_int; 14usize],
    pub __vi: [::core::ffi::c_int; 14usize],
    pub __p: [*mut ::core::ffi::c_void; 7usize],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct HdfDeviceObject {
    pub service: *mut IDeviceIoService,
    pub property: *mut DeviceResourceNode,
    pub deviceClass: DeviceClass,
    pub priv_: *mut ::core::ffi::c_void,
    pub mutex: pthread_rwlock_t,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceIoClient {
    pub device: *mut HdfDeviceObject,
    pub priv_: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IDeviceIoService {
    pub object: HdfObject,
    pub Open: ::core::option::Option<unsafe extern "C" fn(client: *mut HdfDeviceIoClient) -> i32>,
    pub Dispatch: ::core::option::Option<
        unsafe extern "C" fn(
            client: *mut HdfDeviceIoClient,
            cmdId: ::core::ffi::c_int,
            data: *mut HdfSBuf,
            reply: *mut HdfSBuf,
        ) -> i32,
    >,
    pub Release: ::core::option::Option<unsafe extern "C" fn(client: *mut HdfDeviceIoClient)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDriverEntry {
    pub moduleVersion: i32,
    pub moduleName: *const ::core::ffi::c_char,
    pub Bind:
        ::core::option::Option<unsafe extern "C" fn(deviceObject: *mut HdfDeviceObject) -> i32>,
    pub Init:
        ::core::option::Option<unsafe extern "C" fn(deviceObject: *mut HdfDeviceObject) -> i32>,
    pub Release: ::core::option::Option<unsafe extern "C" fn(deviceObject: *mut HdfDeviceObject)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDriver {
    pub entry: *const HdfDriverEntry,
    pub type_: u16,
    pub bus: u16,
    pub node: DListHead,
    pub priv_: *mut ::core::ffi::c_void,
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_APP: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_KMSG: LogType = 4;
pub const LOG_ONLY_PRERELEASE: LogType = 5;
pub const LOG_TYPE_MAX: LogType = 6;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_LEVEL_MIN: LogLevel = 0;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub const LOG_LEVEL_MAX: LogLevel = 8;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
unsafe extern "C" {
    pub fn HdfSysEventSend(
        eventClass: u64,
        event: u32,
        content: *const ::core::ffi::c_char,
        sync: bool,
    ) -> i32;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceNode {
    pub _address: u8,
}
